...
                        .align(Alignment.BottomCenter)
                        .padding(bottom = 42.dp))

            }
        },
        sheetBackgroundColor = Color.Transparent,
        modifier = Modifier.testTag("AuthenticationScreen_bottomSheet")
    ) {


        // Authentification Screen main layout
        Box(
            modifier = Modifier.fillMaxSize()
...
                    shape = RoundedCornerShape(5.dp), // Boutons arrondis
                    modifier = Modifier
                        .align(Alignment.CenterHorizontally)
                        .padding(5.dp)
                        .width(242.dp)
                        .height(52.dp)
                        .testTag("AuthenticationScreen_emailSignInButton")
                ) {
                    Row(modifier = Modifier.fillMaxSize(),
                        verticalAlignment = Alignment.CenterVertically,
                        horizontalArrangement = Arrangement.spacedBy(22.dp) // Espace entre l'icône et le texte
                    ) {
                        Icon(
...
