...
                    text = "Let's Create one !",
                    color = Purple40,
                    style = MaterialTheme.typography.labelMedium,
                    modifier = Modifier
                        .clickable { onClickGoSignUp() }
                        .align(Alignment.CenterVertically)
                        .testTag("authentication_SignInScreen_GoSignUp_B")
                )
            }
            Spacer(modifier = Modifier.height(16.dp))
        }

    }
...
